# pygame-toolshed

./: .gitignore  asset-manager-demo.py  build-web.sh  main.py  mouse-demo.py  mover-demo.py  pause-menu-demo.py  pyproject.toml  requirements.txt  template.py
demo_programs/: animation-demo.py  configs.py  custom_printers.py  draw-rects-ui-demo.py  easing_functions.py  font-demo.py  main.py  mover-demo.py  pause-menu-demo.py  smoke_transition.py  template.py
icon-maker/: pyproject.toml
icon-maker/src/icon_maker/: __init__.py
scripts/: build.sh  make_icon.py
src/toolshed/: __init__.py  assets.py  clipboard.py  easing.py  gif.py  orchestration.py  particles.py  shapes.py  time.py  ttf_printer.py  window.py
toolshed/: font.py  logger.py  mouse.py  orchestration.py  particles.py  ui.py  window.py
