[project]
name = "toolshed"
version = "0.1.0"
description = "Pygame graphics and game library"
readme = "README.md"
authors = [
    { name = "nftrueb", email = "nftrueb@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
